--- a/Cimpress.Stereotype/Cimpress.Stereotype.csproj
+++ b/Cimpress.Stereotype/Cimpress.Stereotype.csproj
@@ -19,7 +19,9 @@
 
   <ItemGroup>
     <PackageReference Include="Cimpress.TagliatelleNetCore" Version="0.0.4" />
-    <PackageReference Include="Iso8601Duration" Version="1.0.0" />
+    <PackageReference Include="Iso8601Duration" Version="1.0.0" >
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="RestSharp" Version="106.6.9" />
