--- a/Cimpress.Stereotype.Example/Cimpress.Stereotype.Example.csproj
+++ b/Cimpress.Stereotype.Example/Cimpress.Stereotype.Example.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Cimpress.Stereotype\Cimpress.Stereotype.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
